# AlgoNoteHelper

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: project-status.mdc  test-credentials.mdc
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_importance_levels.py  0003_preferred_code_language.py  0004_review_dates.py  0005_unique_note_title.py  0006_diff_rename.py  0007_ask_chat_sessions.py
app/: main.py
app/api/: __init__.py  ask_sessions.py  health.py  llm_config.py  notes.py  retrieval.py  rewrite.py
app/core/: config.py  crypto.py  security.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: ask_sessions.py  notes.py
app/services/: embeddings.py  llm.py  notes_dedup.py  notes_query.py  preset_tags.py  vector_search.py
data/: templates.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/messages/: en.json  zh-CN.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AiRewritePanel.test.tsx  AiRewritePanel.tsx  AppNav.tsx  AppToastProvider.tsx  AskAnswer.tsx  AskContextBar.tsx  AskContextChip.tsx  AskRailToggle.tsx  AskRuntimeProvider.tsx  AskSessionList.tsx  AskThread.tsx  CodeField.tsx  DifficultyBadge.tsx  DifficultyMultiSelect.tsx  DifficultyPicker.tsx  FieldLabel.tsx  ImportanceBadge.tsx  ImportanceMultiSelect.tsx  ImportancePicker.tsx  icons.tsx  (+13 more)
tests/: test_rewrite.py
(+138 files in other folders)
