[project]
name = "algonote-helper"
version = "0.1.0"
description = "AlgoNoteHelper — private algorithm practice note catalog with dual-path retrieval"
readme = "README.md"
authors = [
    { name = "Keyneswu", email = "Keyneswu@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.20",
    "greenlet>=3.5.3",
]

[project.scripts]
algonote-helper = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]
